tests/snapshots/test_examples__fail__safety1_ind.fly.z3.houdini.snap
---
source: tests/test_examples.rs
expression: stderr
---
verification errors:
error: invariant is not inductive
   ┌─ examples/fail/safety1_ind.fly:10:1
   │
10 │ assert always !p
   │ ^^^^^^^^^^^^^^^^
   │
   = smt solver returned unknown: assertion not in fixed point


